# libblake2

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Blake2b.cpp  Blake2b.hpp  SubrangeAdaptor.hpp  VectorRange.hpp  blake2b-capi.cpp  blake2b.c  blake2b.h  test-blake2b.cpp
